--- a/app/src/main/res/layout/fragment_chat_message_received.xml
+++ b/app/src/main/res/layout/fragment_chat_message_received.xml
@@ -25,8 +25,9 @@
         android:background="@drawable/received_message"
         android:maxWidth="200dp"
         android:paddingLeft="10dp"
+        android:paddingTop="5dp"
         android:paddingRight="10dp"
-        android:paddingBottom="3dp"
+        android:paddingBottom="6dp"
         android:textColor="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
