--- a/app/src/main/res/layout/fragment_chat_message_sent.xml
+++ b/app/src/main/res/layout/fragment_chat_message_sent.xml
@@ -26,8 +26,9 @@
         android:background="@drawable/sent_message"
         android:maxWidth="200dp"
         android:paddingLeft="10dp"
+        android:paddingTop="5dp"
         android:paddingRight="10dp"
-        android:paddingBottom="3dp"
+        android:paddingBottom="6dp"
         android:textColor="@android:color/white"
         app:layout_constraintEnd_toStartOf="@+id/chat_message_sent_user_image"
         app:layout_constraintTop_toTopOf="parent"
