--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="base90">#f8f9fa</color> <!-- B AAA: Button / 3D widget background -->
     <color name="base80">#eaecf0</color> <!-- B AAA: Disabled text input background -->
     <color name="base70">#c8ccd1</color> <!-- B AAA: Disabled button / 3D widget background -->
-    <color name="base50">#a2a9b1</color> <!-- B AAA: Highlighted border -->
+    <color name="base50">#A2A9B1</color> <!-- B AAA: Highlighted border -->
     <color name="base30">#72777d</color> <!-- B&W AA: Disabled elements text, Placeholder text, Active border -->
     <color name="base20">#54595d</color> <!-- W AAA: Emphasized secondary text at level AAA need -->
     <color name="base18">#43464A</color> <!-- AAA: "Mesosphere gray" -->
