--- a/app/src/main/res/menu/menu_tabs.xml
+++ b/app/src/main/res/menu/menu_tabs.xml
@@ -7,8 +7,8 @@
     <item android:id="@+id/menu_close_all_tabs"
         android:title="@string/menu_close_all_tabs"
         app:showAsAction="never" />
-    <item android:id="@+id/menu_reading_lists"
-        android:title="@string/menu_page_reading_lists"
+    <item android:id="@+id/menu_saved"
+        android:title="@string/menu_page_saved"
         app:showAsAction="never" />
     <item android:id="@+id/menu_recently_viewed"
         android:title="@string/menu_page_recently_viewed"
