--- a/app/src/main/res/layout/view_article_tab_layout.xml
+++ b/app/src/main/res/layout/view_article_tab_layout.xml
@@ -53,12 +53,22 @@
         app:layout_constraintStart_toEndOf="@+id/article_menu_find_in_page"
         app:srcCompat="@drawable/ic_format_size_white_24dp" />
     <android.support.v7.widget.AppCompatImageView
+        android:id="@+id/article_menu_view_notes"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:contentDescription="@string/menu_page_view_notes"
+        android:padding="16dp"
+        android:tag="5"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        app:layout_constraintStart_toEndOf="@+id/article_menu_font_and_theme"
+        app:srcCompat="@drawable/ic_note_white_24dp"/>
+    <android.support.v7.widget.AppCompatImageView
         android:id="@+id/article_menu_show_toc"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:padding="@dimen/bottom_toolbar_item_padding"
         android:contentDescription="@string/menu_show_toc"
-        android:tag="5"
+        android:tag="6"
         android:background="?attr/selectableItemBackgroundBorderless"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/ic_list_white_24dp"/>
