--- a/app/src/main/res/layout/item_notes.xml
+++ b/app/src/main/res/layout/item_notes.xml
@@ -4,16 +4,16 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <!-- 192 -->
     <android.support.v7.widget.CardView
         android:layout_width="288dp"
         android:layout_height="264dp"
-        android:background="?attr/selectableItemBackground"
+        android:foreground="?attr/selectableItemBackground"
+        android:addStatesFromChildren="true"
         app:cardElevation="8dp"
         app:cardUseCompatPadding="true">
 
         <TextView
-            android:id="@+id/dialog_notes_card_text"
+            android:id="@+id/dialog_notes_text"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:textSize="16sp"
