--- a/app/src/main/res/layout/item_notes.xml
+++ b/app/src/main/res/layout/item_notes.xml
@@ -43,23 +43,36 @@
         android:layout_marginStart="16dp"
         android:ellipsize="end"
         android:maxLines="2"
-        app:layout_constraintEnd_toStartOf="@+id/item_overflow_menu"
-        app:layout_constraintStart_toEndOf="@+id/item_image_2"
+        app:layout_constraintStart_toEndOf="@id/item_note_thumbnail"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/item_note_overflow_menu"
         tools:text="Lorem ipsum" />
 
     <TextView
+        android:id="@+id/item_note_article_description"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        style="@style/MaterialListSubtitle"
+        app:layout_constraintTop_toBottomOf="@+id/item_note_title"
+        app:layout_constraintStart_toStartOf="@+id/item_note_title"
+        app:layout_constraintEnd_toEndOf="@+id/item_note_title"
+        android:textSize="12sp"
+        android:ellipsize="end"
+        android:maxLines="1"
+        tools:text="x items" />
+
+    <TextView
         android:id="@+id/item_note_content"
+        style="@style/MaterialListSubtitle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        style="@style/MaterialListSubtitle"
-        app:layout_constraintTop_toBottomOf="@+id/item_reading_list_statistical_description"
-        app:layout_constraintStart_toStartOf="@+id/item_reading_list_statistical_description"
-        app:layout_constraintEnd_toEndOf="@+id/item_reading_list_statistical_description"
         android:ellipsize="end"
         android:maxLines="@integer/reading_list_description_summary_view_max_lines"
-        tools:text="Sample description" />
+        app:layout_constraintStart_toStartOf="@id/item_note_title"
+        app:layout_constraintTop_toBottomOf="@id/item_note_article_description"
+        app:layout_constraintEnd_toEndOf="@id/item_note_title"
+        tools:text="Sample content" />
 
     <ImageView
         android:id="@+id/item_note_overflow_menu"
