--- a/app/src/main/res/layout/fragment_notes.xml
+++ b/app/src/main/res/layout/fragment_notes.xml
@@ -45,7 +45,7 @@
                 android:layout_weight="1"
                 android:text="Back" />
             <Button
-                android:id="@+id/notes_item_view"
+                android:id="@+id/notes_item_redirect"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
