--- a/app/src/main/res/menu/menu_notes_list_item.xml
+++ b/app/src/main/res/menu/menu_notes_list_item.xml
@@ -3,4 +3,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/menu_notes_list_delete"
         android:title="@string/menu_notes_list_delete"/>
+    <item android:id="@+id/menu_notes_list_redirect"
+        android:title="@string/menu_notes_list_redirect"/>
 </menu>
