--- a/app/src/main/res/layout/fragment_notes.xml
+++ b/app/src/main/res/layout/fragment_notes.xml
@@ -40,19 +40,39 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/notes_item_back" />
+                android:background="@android:color/transparent"
+                android:drawableLeft="@drawable/ic_arrow_back_black_24dp"
+                android:text="@string/notes_item_back"
+                android:textColor="@color/black54" />
+
             <Button
                 android:id="@+id/notes_item_redirect"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/notes_view_article" />
+                android:background="@android:color/transparent"
+                android:drawableRight="@drawable/ic_arrow_forward_black_24dp"
+                android:text="@string/notes_view_article"
+                android:textColor="@color/black54" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="50dp">
+            android:layout_margin="15dp"
+            android:layout_marginBottom="80dp"
+            android:layout_marginTop="5dp"
+            android:orientation="vertical"
+            android:padding="10dp">
+
+            <TextView
+                android:id="@+id/notes_item_title"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="15dp"
+                android:text="awdpwadadaw"
+                android:textSize="20sp" />
+
             <ScrollView
                 android:id="@+id/notes_item_scrollview"
                 android:layout_width="fill_parent"
@@ -60,18 +80,11 @@
                 android:clipToPadding="false"
                 android:fillViewport="true"
                 android:scrollbars="vertical">
+
                 <TextView
                     android:id="@+id/notes_item_text"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="80dp"
-                    android:layout_marginEnd="25dp"
-                    android:layout_marginLeft="25dp"
-                    android:layout_marginRight="25dp"
-                    android:layout_marginStart="25dp"
-                    android:layout_marginTop="25dp"
-                    android:background="@color/white70"
-                    android:padding="10dp"
                     android:scrollbars="vertical"
                     android:text="@string/notes_item_description"
                     android:textSize="16sp" />
