--- a/app/src/main/res/layout/fragment_notes.xml
+++ b/app/src/main/res/layout/fragment_notes.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -10,87 +11,13 @@
         android:layout_height="wrap_content"
         android:animateLayoutChanges="true"
         android:orientation="vertical"
-        android:visibility="visible"
         app:layout_constraintTop_toTopOf="parent">
+
         <android.support.v7.widget.RecyclerView
             android:id="@+id/notes_list_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:scrollbars="vertical" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/notes_item_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fillViewport="true"
-        android:orientation="vertical"
-        android:visibility="gone">
-        <com.facebook.drawee.view.SimpleDraweeView
-            android:id="@+id/notes_item_image"
-            style="@style/SimpleDraweeViewPlaceholder.Article"
-            android:layout_width="fill_parent"
-            android:layout_height="147dp"
-            android:adjustViewBounds="true" />
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content">
-            <Button
-                android:id="@+id/notes_item_back"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@android:color/transparent"
-                android:drawableLeft="@drawable/ic_arrow_back_black_24dp"
-                android:text="@string/notes_item_back"
-                android:textColor="@color/black54" />
-
-            <Button
-                android:id="@+id/notes_item_redirect"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@android:color/transparent"
-                android:drawableRight="@drawable/ic_arrow_forward_black_24dp"
-                android:text="@string/notes_view_article"
-                android:textColor="@color/black54" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="15dp"
-            android:layout_marginBottom="80dp"
-            android:layout_marginTop="5dp"
-            android:orientation="vertical"
-            android:padding="10dp">
-
-            <TextView
-                android:id="@+id/notes_item_title"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="15dp"
-                android:text="awdpwadadaw"
-                android:textSize="20sp" />
-
-            <ScrollView
-                android:id="@+id/notes_item_scrollview"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:clipToPadding="false"
-                android:fillViewport="true"
-                android:scrollbars="vertical">
-
-                <TextView
-                    android:id="@+id/notes_item_text"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:scrollbars="vertical"
-                    android:text="@string/notes_item_description"
-                    android:textSize="16sp" />
-            </ScrollView>
-        </LinearLayout>
 
     </LinearLayout>
-
 </android.support.constraint.ConstraintLayout>
